<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/artist_button"
          android:icon="@drawable/ic_artists_mode"
          android:title="@string/artist"
          app:showAsAction="always|collapseActionView">
        <menu>
            <item android:id="@+id/show_artist_button"
                  android:title="@string/show_artist"
                  android:icon="@drawable/ic_artist_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/photo_artist_button"
                  android:title="@string/photo_artist"
                  android:icon="@drawable/ic_photo_dark"
                  app:showAsAction="always|withText"/>
        </menu>
    </item>
    <item android:id="@+id/track_button"
          android:icon="@drawable/drop_normal"
          android:title="@string/track"
          app:showAsAction="always|collapseActionView">
        <menu>
            <item android:id="@+id/share_track_button"
                  android:title="@string/share_track"
                  android:icon="@drawable/ic_share_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/next_url_button"
                  android:title="@string/next_url"
                  android:icon="@drawable/ic_next_url_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/lyrics_button"
                  android:title="@string/lyrics"
                  android:icon="@drawable/ic_lyrics_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/youtube_video_button"
                  android:title="@string/video"
                  android:icon="@drawable/ic_video_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/add_to_vk_button"
                  android:title="@string/add_to_vk"
                  android:icon="@drawable/ic_add_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/love_button"
                  android:icon="@drawable/ic_love_active"
                  android:title="@string/remove_from_loved"
                  app:showAsAction="always|withText"/>
        </menu>
    </item>
    <item android:id="@+id/more_button"
          android:icon="@drawable/settings_normal"
          android:title="@string/preferences"
          app:showAsAction="always|collapseActionView">
        <menu>
            <item android:id="@+id/settings"
                  android:title="@string/preferences"
                  android:icon="@drawable/ic_settings_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/equalizer"
                  android:title="@string/equalizer"
                  android:icon="@drawable/ic_equalizer_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/timer_button"
                  android:title="@string/timer"
                  android:icon="@drawable/ic_timer_dark"
                  app:showAsAction="always|withText"/>
            <item android:id="@+id/exit_button"
                  android:icon="@drawable/ic_exit_dark"
                  android:title="@string/exit"
                  app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>