<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/track_button"
        android:title="@string/track"
        android:icon="@drawable/drop_normal"
        app:showAsAction="always|collapseActionView">
        <menu>
            <item
                android:id="@+id/share_track_button"
                android:title="@string/share_track"
                android:icon="@drawable/ic_share_dark"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/next_url_button"
                android:title="@string/next_url"
                android:icon="@drawable/ic_next_url_dark"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/lyrics_button"
                android:title="@string/lyrics"
                android:icon="@drawable/ic_lyrics_dark"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/youtube_video_button"
                android:title="@string/video"
                android:icon="@drawable/ic_video_dark"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/add_to_vk_button"
                android:title="@string/add_to_vk"
                android:icon="@drawable/ic_add_dark"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>