<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding">

    <RelativeLayout
        android:id="@+id/auth_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_gravity="left|center_vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/avatar"
            android:layout_toRightOf="@+id/avatar"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/name_text_view"
            android:layout_alignLeft="@+id/name_text_view"
            android:singleLine="true"
            android:text="@string/authorized_as"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_alignParentBottom="true"
            android:paddingRight="4dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cropToPadding="false"
            android:src="@drawable/lastfm_logo" />

        <Button
            android:id="@+id/authorize_lastfm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/authorize" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_edit_text"
            android:hint="@string/password"
            android:password="true"
            android:visibility="visible" />

        <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView"
            android:layout_gravity="center"
            android:hint="@string/login"
            android:visibility="visible" />

        <TextView
            android:id="@+id/auth_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/authorize_lastfm_button"
            android:background="@color/error_red"
            android:padding="4dp"
            android:text="@string/auth_error_happened"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>